prod_snapshot_2015-09-24_1030/objects/CallReport__c.object
<CustomObject>
    <fields>
        <fullName>affiliate_name__c</fullName>
        <label>Publisher Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>affiliate_payout__c</fullName>
        <label>Affiliate Payout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>call_quality_description_detail__c</fullName>
        <label>Call Quality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>call_source_description__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>calling_phone_number__c</fullName>
        <description>Phone number that is calling</description>
        <label>Caller ID</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>campaign_name__c</fullName>
        <label>Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>duration__c</fullName>
        <description>Duration in Seconds</description>
        <label>Duration</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>keypresses__c</fullName>
        <label>Keypresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>media_type__c</fullName>
        <label>Media Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mobile__c</fullName>
        <label>Phone Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>promo_line_description__c</fullName>
        <label>Promo Number Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recorded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recorded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>start_time_utc__c</fullName>
        <description>Call start time</description>
        <label>Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>transaction_id__c</fullName>
        <externalId>true</externalId>
        <label>Transaction ID</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CallReport</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CallReport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CallReports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>